# tracepipe_ai

./: .gitignore  README.md  UPDATE.md  features_overview.md  lineage_extractor.py  mcp_server.py  pyproject.toml  requirements.txt  setup.py  tracepipe_agent_mission.md  unified_lineage.py
companies_data/: corporate.duckdb  setup_raw.py
companies_data_duckdb/: setup_raw.py
config/: config.yml  db_config.py  governance_policies.yml  workflow_config.yml  workspace_config.py
connectors/: __init__.py  base.py  dbt_connector.py  external_sources.py  lineage_engine.py
install/: install.ps1  install.sh  setup_repo_url.ps1  setup_repo_url.sh
scripts/: advanced_spark_analyzer.py  advanced_transform_tracker.py  anomaly_detector.py  bi_integration_cli.py  blast_radius.py  build_lineage_graph.py  build_metadata.py  business_glossary.py  cli.py  column_lineage.py  column_lineage_tracker.py  context_enricher.py  context_viewer.py  cross_system_lineage.py  cross_workspace_lineage.py  databricks_lineage_extractor.py  databricks_mock.py  debug_engine.py  email_sender.py  external_connectors.py  external_lineage.py  external_lineage_integrator.py  glossary_cli.py  governance_engine.py  governance_manager.py  governance_policy.py  governance_ui_api.py  governance_ui_manager.py  graph_visualizer.py  historical_lineage_store.py  impact_analysis.py  impact_analysis_visualizer.py  impact_analyzer.py  impact_cli.py  impact_dashboard.py  impact_simulator.py  impact_visualizer.py  lineage_aggregator.py  lineage_archive.py  lineage_enhancer.py  (+30 more)
src/: advanced_impact_analyzer.py  api.py  blast_radius.py  cicd_integration.py  cli_impact_analysis.py  column_lineage.py  column_lineage_extractor.py  column_lineage_tracker.py  data_quality_integration.py  impact_analysis.py  impact_analyzer.py  lineage_unifier.py  lineage_visualizer.py  spark_lineage_parser.py  transformation_classifier.py  udf_analyzer.py
tests/: test_advanced_impact_analysis.py  test_bi_integration.py  test_business_context.py  test_business_glossary.py  test_ci_cd_integration.py  test_cicd_integration.py  test_column_lineage.py  test_cross_system_lineage.py  test_data_classification.py  test_data_quality.py  test_data_quality_observability.py  test_databricks_lineage.py  test_enhanced_lineage.py  test_feature_33.py  test_feature_40.py  test_feature_47.py  test_git_integration.py  test_glossary.py  test_governance.py  test_governance_engine.py  test_governance_orchestration.py  test_impact_analysis.py  test_impact_analysis_governance.py  test_impact_simulator.py  test_implementation.py  test_integration.py  test_lineage.py  test_lineage_archive.py  test_lineage_capture.py  test_lineage_connectors.py  test_lineage_history.py  (+14 more)
(+188 files in other folders)
