[tool.poetry]
name = "tracepipe-ai"
version = "0.1.0"
description = "AI-powered data lineage platform"
authors = ["Tracepipe Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.1"
aiohttp = "^3.9.1"
databricks-sdk = "^0.12.0"
openai = "^1.3.7"
langchain = "^0.1.0"
celery = "^5.3.4"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
pyarrow = "^14.0.1"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
duckdb = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
